--- a/public/county-test.html
+++ b/public/county-test.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Test - County Dropdown Only</title>
+  <title>Test - County Only (no state param)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body {font-family:system-ui,sans-serif;background:#f6f8fb;margin:0;padding:40px}
@@ -16,34 +16,26 @@
 </head>
 <body>
   <div class="wrap">
-    <h1>Test: County Dropdown Only</h1>
-    <p class="note">Loads counties for Massachusetts from live Neon API.</p>
+    <h1>Test: County Dropdown Only (no state param)</h1>
+    <p class="note">Calls /api/geographies?level=county (no state filter).</p>
 
-    <label>County (Massachusetts)</label>
+    <label>County</label>
     <select id="county">
       <option value="">— Select county —</option>
     </select>
 
-    <div id="output">Nothing selected yet.</div>
+    <div id="output">Nothing loaded yet.</div>
   </div>
 
   <script>
-    // Hardcoded state for this test (change if needed)
-    const testState = 'Massachusetts';
-
-    // Load counties
-    fetch(`/api/geographies?level=county&state=${encodeURIComponent(testState)}`)
+    fetch('/api/geographies?level=county')
       .then(r => r.json())
       .then(data => {
-        console.log('Raw counties response:', data); // debug in console
+        console.log('Raw response:', data);
 
-        if (data.error) {
-          throw new Error(data.error);
-        }
+        if (data.error) throw new Error(data.error);
 
-        if (!Array.isArray(data)) {
-          throw new Error('Response is not an array');
-        }
+        if (!Array.isArray(data)) throw new Error('Response is not an array');
 
         const sel = document.getElementById('county');
         data.forEach(c => {
@@ -56,15 +48,13 @@
         document.getElementById('output').textContent = 'Counties loaded: ' + data.length + ' found';
       })
       .catch(e => {
-        console.error('Counties load error:', e);
+        console.error('Error:', e);
         document.getElementById('output').innerHTML = '<p class="error">Failed: ' + e.message + '</p>';
       });
 
-    // Show selected county
     document.getElementById('county').onchange = e => {
       const county = e.target.value;
-      document.getElementById('output').textContent = 
-        county ? `Selected county: ${county}` : 'Nothing selected yet.';
+      document.getElementById('output').textContent = county ? `Selected: ${county}` : 'Nothing selected yet.';
     };
   </script>
 </body>
