--- a/public/county-test.html
+++ b/public/county-test.html
@@ -2,23 +2,64 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Test - County Only (no state param)</title>
+  <title>BankMaps – Activate AIServices (County Test)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    body {font-family:system-ui,sans-serif;background:#f6f8fb;margin:0;padding:40px}
-    .wrap {max-width:600px;margin:auto;background:#fff;padding:32px;border-radius:12px;box-shadow:0 6px 18px rgba(0,0,0,0.1)}
-    h1 {color:#0b3366;margin:0 0 20px}
-    label {display:block;font-weight:600;margin-bottom:8px}
-    select {width:100%;padding:12px;border:1px solid #ccd5e0;border-radius:8px;font-size:16px}
-    #output {margin-top:32px;padding:16px;background:#f0f4f8;border-radius:8px;white-space:pre;font-family:monospace;font-size:14px}
-    .note {color:#555;font-size:0.9rem;margin-bottom:16px}
-    .error {color:#d32f2f;font-weight:bold;margin-top:8px}
+    body {
+      font-family: system-ui, sans-serif;
+      background: #f6f8fb;
+      margin: 0;
+      padding: 40px;
+    }
+    .wrap {
+      max-width: 600px;
+      margin: auto;
+      background: white;
+      padding: 32px;
+      border-radius: 12px;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.1);
+    }
+    h1 {
+      color: #0b3366;
+      margin: 0 0 20px;
+    }
+    label {
+      display: block;
+      font-weight: 600;
+      margin-bottom: 8px;
+    }
+    select {
+      width: 100%;
+      padding: 12px;
+      border: 1px solid #ccd5e0;
+      border-radius: 8px;
+      font-size: 16px;
+    }
+    #output {
+      margin-top: 32px;
+      padding: 16px;
+      background: #f0f4f8;
+      border-radius: 8px;
+      white-space: pre;
+      font-family: monospace;
+      font-size: 14px;
+    }
+    .note {
+      color: #555;
+      font-size: 0.9rem;
+      margin-bottom: 16px;
+    }
+    .error {
+      color: #d32f2f;
+      font-weight: bold;
+      margin-top: 8px;
+    }
   </style>
 </head>
 <body>
   <div class="wrap">
-    <h1>Test: County Dropdown Only (no state param)</h1>
-    <p class="note">Calls /api/geographies?level=county (no state filter).</p>
+    <h1>Test: County Dropdown Only</h1>
+    <p class="note">Loads counties from live Neon API (no state filter).</p>
 
     <label>County</label>
     <select id="county">
@@ -29,6 +70,7 @@
   </div>
 
   <script>
+    // Load counties (no state param)
     fetch('/api/geographies?level=county')
       .then(r => r.json())
       .then(data => {
@@ -57,6 +99,7 @@
         document.getElementById('output').innerHTML = '<p class="error">Failed: ' + e.message + '</p>';
       });
 
+    // Show selected county
     document.getElementById('county').onchange = e => {
       const county = e.target.value;
       document.getElementById('output').textContent = county ? `Selected: ${county}` : 'Nothing selected yet.';
